Use the official ffmpeg gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,67 @@
+.config
+.version
+*.a
 *.o
 *.d
-*.a
-build/*.h
-*.elf
+*.def
+*.dll
 *.dol
+*.elf
+*.exe
+*.ho
+*.lib
+*.pc
+*.so
+*.so.*
+*.ver
+*-example
+*-test
+*_g
+*.def
+*.dll
+*.lib
+*.exp
+build/*.h
+source/mplayer/ffmpeg/config.*
+source/mplayer/ffmpeg/doc/*.1
+source/mplayer/ffmpeg/doc/*.html
+source/mplayer/ffmpeg/doc/*.pod
+source/mplayer/ffmpeg/doc/fate.txt
+source/mplayer/ffmpeg/doxy
+source/mplayer/ffmpeg/ffmpeg
+source/mplayer/ffmpeg/ffplay
+source/mplayer/ffmpeg/ffprobe
+source/mplayer/ffmpeg/ffserver
+source/mplayer/ffmpeg/avconv
+source/mplayer/ffmpeg/doc/avoptions_codec.texi
+source/mplayer/ffmpeg/doc/avoptions_format.texi
+source/mplayer/ffmpeg/doc/print_options
+source/mplayer/ffmpeg/doc/examples/decoding_encoding
+source/mplayer/ffmpeg/doc/examples/filtering_audio
+source/mplayer/ffmpeg/doc/examples/filtering_video
+source/mplayer/ffmpeg/doc/examples/metadata
+source/mplayer/ffmpeg/doc/examples/muxing
+source/mplayer/ffmpeg/libavcodec/*_tablegen
+source/mplayer/ffmpeg/libavcodec/*_tables.c
+source/mplayer/ffmpeg/libavcodec/*_tables.h
+source/mplayer/ffmpeg/libavcodec/codec_names.h
+source/mplayer/ffmpeg/libavutil/avconfig.h
+source/mplayer/ffmpeg/tests/audiogen
+source/mplayer/ffmpeg/tests/base64
+source/mplayer/ffmpeg/tests/data
+source/mplayer/ffmpeg/tests/rotozoom
+source/mplayer/ffmpeg/tests/tiny_psnr
+source/mplayer/ffmpeg/tests/videogen
+source/mplayer/ffmpeg/tests/vsynth1
+source/mplayer/ffmpeg/tests/vsynth2
+source/mplayer/ffmpeg/tools/aviocat
+source/mplayer/ffmpeg/tools/cws2fws
+source/mplayer/ffmpeg/tools/ffeval
+source/mplayer/ffmpeg/tools/graph2dot
+source/mplayer/ffmpeg/tools/ismindex
+source/mplayer/ffmpeg/tools/lavfi-showfiltfmts
+source/mplayer/ffmpeg/tools/pktdumper
+source/mplayer/ffmpeg/tools/probetest
+source/mplayer/ffmpeg/tools/qt-faststart
+source/mplayer/ffmpeg/tools/trasher
+source/mplayer/ffmpeg/version.h
